Plugin Shade added
Modificaciones requeridas de la práctica maven_p01_c_GarciaFernandezMarta para la asignatura Desarrollo de Interfaces de 2ºDAM

--- a/src/main/resources/es/damdi/marta/student-list.fxml
+++ b/src/main/resources/es/damdi/marta/student-list.fxml
@@ -9,7 +9,7 @@
 <?import javafx.geometry.Insets?>
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.javafx.StudentController"
+          fx:controller="es.damdi.marta.StudentController"
           alignment="center" hgap="10" vgap="10">
 
     <padding>
